2001-08-20  Dave Jones  <davej@suse.de>

	* doc/oprofile.sgml:
	  Updated to reflect new Athlon/Duron capabilities.
	* pp/oprof_convert.c:
	* pp/oprofpp.c: use EXIT_FAILURE | EXIT_SUCCESS
	  in exit() calls.
	* oprofile.c: Make non-exported functions static
	  and remove duplicate definitions.

2001-08-19  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_start: handle celeries in cpu type
 
2001-08-19  John Levon  <moz@compsoc.man.ac.uk>

	* op_init.c:
	* oprofile.h:
	* oprofile.c: small tidies of the Athlon support

2001-08-19  Dave Jones  <davej@suse.de>

	* op_events.c:
	* op_init.c: 
	* oprofile.h:
	* oprofile.c:
	* dae/op_start:
	* dae/oprofiled.h:
	* dae/oprofiled.c: initial Athlon support

2001-08-19  Philippe Elie  <ph_e@club-internet.fr>

	* oprofile.c: use symbolic constant for all apic setup, no generated
	  code change

2001-08-18  Philippe Elie  <ph_e@club-internet.fr>
 
 	* Makefile.in:
	* dae/Makefile.in:
	* pp/Makefile.in:
	* doc/Makefile.in:
 	* gui/Makefile.in: add uninstall target
 
2001-08-18  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c: tiny cleanup
 
2001-08-17  Philippe Elie  <ph_e@club-internet.fr>

	* dae/opd_proc.c:
	* TODO: minor cleanup.

2001-08-16  Philippe Elie  <ph_e@club-internet.fr>

	* gui/oprofile:
	* dae/op_start:
	* doc/oprofile.1.in: document and use op_dump

2001-08-16  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump version to 0.0.5cvs
 
2001-08-16  John Levon  <moz@compsoc.man.ac.uk>

	* all Makefile.in: mkdir install files

2001-08-15  Philippe Elie  <ph_e@club-internet.fr>

	* dae/opd_proc.c: fix a FILE* leak in opd_get_ascii_maps()

2001-08-14  John Levon  <moz@compsoc.man.ac.uk>

	* op_syscalls.c: don't return negative hashes !
	  revert dname len "fix"
	  use a much better hash function

	* dae/opd_proc.c: protect against negative hashes
 
2001-08-14  John Levon  <moz@compsoc.man.ac.uk>

	* op_syscalls.c: some small fixes

	* oprofile.c: add back unmasking code during set_gate, but only
	  LVTPC
 