@@ -1,3 +1,11 @@
+2001-08-31  John Levon  <moz@compsoc.man.ac.uk>
+
+	* Makefile.in:
+	* op_x86.c:
+	* oprofile.h:
+	* oprofile.c: a prototype detector for SMP hardware,
+	  some small cleanup
+ 
 2001-08-20  Dave Jones  <davej@suse.de>
 
 	* doc/oprofile.sgml:
